# ibmmq_demo

./: CMakeLists.txt  README.md  main.cpp  main2.cpp  main3.cpp  ref.txt
